--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ a{
 }
 
 .section-2 a{
-    display: block;
+    /* display: block; */
     padding: 5px;
     font-size: 1.2rem;
     padding-left: 0;
@@ -100,6 +100,8 @@ img {
     display: inline;
     border-radius: 20px;
 }
+
+
 
 /* media queries */
 @media(max-width:780px){
