--- a/style.css
+++ b/style.css
@@ -1,26 +1,25 @@
 /* global */
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
-
-/* debug
- * {
-    border: 1px solid red;
-}
-*/
-
+/* debug */
+ /* * {
+    outline: 1px solid red;
+} */
 
 .grid-2{
+    height:70%;
     display: grid;
     grid-template-columns: repeat(2,1fr);
 }
 
+
 body{
+    height:800px;
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
     background-color: #FFBFA0;
     color: #7A7C80;
-
 }
 
 /* h2,.white{
@@ -33,8 +32,10 @@ a{
 }
 /* section 1 */
 .section-1{
-    padding-top: 40vh;
+    height:60%;
+    padding-top: 25vh;
     text-align: center;
+    max-height: 800px;
 }
 
 .section-1 p{
@@ -54,8 +55,9 @@ a{
 }
 /* section 2 */
 .section-2{
+    height:80%;
     padding-top: 10vh;
-    width: 70%;
+    width: 85%;
 }
 
 .section-2 h2{
@@ -79,7 +81,8 @@ a{
 /* animations / utilities */
 .section-2 a:hover{
     font-size: 1.3rem;
-    color: #fff;
+    font-weight: 900;
+    color: black;
     cursor: pointer;
     transition: 0.2s;
 }
@@ -96,15 +99,27 @@ a{
 }
 
 img {
-    height:30%;
+    height:35%;
     display: inline;
     border-radius: 20px;
 }
 
 
+.codething {
+    font-size: x-large;
+    margin: auto;
+    transition: 2s;
+    align-items: center;
+}
+.codething:hover {
+    transform:scale(1.3);
+}
 
 /* media queries */
 @media(max-width:780px){
+    #experience {
+        padding:0 100px;
+    }
     .section-1 {
         height:300px;
     }
@@ -116,10 +131,9 @@ img {
         padding-top: 5rem;
     }
     .section-2{
-        padding: 0;
-        padding-left: 0;
+        padding: 0 20px;
         padding-top: 2rem;
-        width: 100%;
+        width: 90%;
         text-align: center;
     }
     .section-2 a{
