--- a/portfolio-website-2021-v1/style.css
+++ b/portfolio-website-2021-v1/style.css
@@ -27,8 +27,8 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
-    background-color: #FFBFA0;
-    color: #7A7C80;
+    background-color: #D7F2BA;
+    color: black;
 }
 
 /* h2,.white{
@@ -36,7 +36,7 @@ body{
 } */
 
 a{
-    color: #7A7C80;
+    color: black;
     text-decoration: none;
 }
 /* section 1 */
@@ -91,13 +91,13 @@ a{
 .section-2 a:hover{
     font-size: 1.3rem;
     font-weight: 900;
-    color: black;
+    color: #c32aff;
     cursor: pointer;
     transition: 0.2s;
 }
 
 .section-1 a:hover{
-    color: #fff;
+    color: #c32aff;
     cursor: pointer;
     transition: 0.3s;
 }
