--- a/portfolio-website-2021-v1/style.css
+++ b/portfolio-website-2021-v1/style.css
@@ -37,10 +37,11 @@ a{
 }
 /* section 1 */
 .section-1{
-    height:60%;
+    height:80%;
     padding-top: 10vh;
     text-align: center;
     max-height: 800px;
+    margin-bottom: 20px;
 }
 
 .section-1 p{
@@ -113,13 +114,12 @@ img {
 
 
 .codething {
-    font-size: x-large;
-    margin: auto;
+    margin-top: 10px;
     transition: 2s;
     align-items: center;
 }
 .codething:hover {
-    transform:scale(1.3);
+    transform:scale(1.1);
 }
 
 #footer{
@@ -134,6 +134,7 @@ img {
     }
     .section-1 {
         height:300px;
+        margin-bottom: 70px;
     }
     .grid-2{
         grid-template-columns: 1fr;
