--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@
   -webkit-overflow-scrolling: touch;
 }
 
+#navbar {
+  height:100%;
+  width:150px;
+}
 
 @import url("https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap");
 body {
@@ -33,14 +37,10 @@ nav {
 }
 
 #mycontainer {
-  /* margin-left: 50px; */
+  margin-left: 150px;
   padding-top: 60px;
 }
 
-.projectscontainer {
-  margin:auto;
-  width:80%
-}
 
 #about {
   height: 100%;
@@ -136,6 +136,7 @@ p {
 
   .experiencetext {
     padding-right: 0;
+    padding-left: 0;
     margin:0 10px 0 10px;
   }
   body {
