--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,8 @@ body {
 }
 
 footer {
-  padding-left: 50px;
+  /* padding-left: 50px; */
+  margin-left:150px;
   height: 30px;
   background-color: f6f0ed;
   text-align: center;
@@ -120,6 +121,10 @@ p {
 
 /* responsive */
 @media only screen and (max-width: 600px) {
+  footer {
+    margin-left: 0;
+  }
+
   .experiencetext {
     padding-right: 0;
     padding-left: 0;
