--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,6 @@ td {
   width: 100px;
   height: 100px;
   object-fit: cover;
-  /* margin-left: 50px; */
 }
 
 .profilepic {
@@ -119,6 +118,18 @@ p {
 .mytable {
   width:80%;
   margin:auto;
+}
+
+.bounce {
+  position:relative;
+  -webkit-animation:bounce 1s infinite;
+}
+
+@-webkit-keyframes bounce {
+  0%       { bottom:2px; }
+  25%, 75% { bottom:8px; }
+  50%      { bottom:13px; }
+  100%     {bottom:0;}
 }
 
 /* responsive */
