--- a/styles.css
+++ b/styles.css
@@ -138,8 +138,56 @@ p {
   100%     {bottom:0;}
 }
 
+/* hamburger menu style */
+/* Style the navigation menu */
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+  position: sticky;
+  display: none;
+}
+
+/* Hide the links inside the navigation menu (except for logo/home) */
+.topnav #myLinks {
+  display: none;
+}
+
+/* Style navigation menu links */
+.topnav a {
+  color: white;
+  padding: 14px 16px 5px 14px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+/* Style the hamburger menu */
+.topnav a.icon {
+  background: black;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 44px;
+}
+
+/* Add a grey background color on mouse-over */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Style the active link (or home/logo) */
+.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
 /* responsive */
 @media only screen and (max-width: 600px) {
+  .topnav {
+    display:block;
+  }
   footer {
     margin-left: 0;
   }
@@ -198,3 +246,4 @@ p {
   text-align: center;
   width:100%;
 }
+
