--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,11 @@
   width:150px;
   position: fixed;
   z-index: 1000;
-  opacity:0;
+  opacity:1;
   transition: all 8s ease;
 }
 #navbar:hover {
-  opacity: 1;
+  /* opacity: 1; */
   transition: all 0.5s ease
 }
 
