--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -708,8 +708,8 @@ ul.social {
         @include vendor("transition", "background-color .2s ease-in-out");
         // background-color: #444;
         border-radius: 6px;
-        box-shadow: inset 0px 0px 0px 1px #282828,
-          inset 0px 2px 1px 0px rgba(255, 255, 255, 0.1);
+        // box-shadow: inset 0px 0px 0px 1px #282828,
+        //   inset 0px 2px 1px 0px rgba(255, 255, 255, 0.1);
         color: #2e2e2e !important;
         display: block;
         font-size: 26px;
