--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -238,7 +238,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: 700; }
+  font-weight: 500; }
 
 h1 {
   font-size: 3.25em;
@@ -1057,10 +1057,6 @@ input[type="submit"],
 input[type="reset"],
 button,
 .button {
-  background-image: url("images/bg.png"), -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
-  background-image: url("images/bg.png"), -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
-  background-image: url("images/bg.png"), -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
-  background-image: url("images/bg.png"), linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
   -moz-transition: background-color .2s ease-in-out;
   -webkit-transition: background-color .2s ease-in-out;
   -ms-transition: background-color .2s ease-in-out;
@@ -1068,17 +1064,15 @@ button,
   -webkit-appearance: none;
   position: relative;
   display: inline-block;
-  color: #fff !important;
+  color: black !important;
   text-decoration: none;
-  font-weight: 700;
+  font-weight: 400;
   border: 0;
   outline: 0;
   cursor: pointer;
-  border-radius: 8px;
-  text-shadow: -1px -1px 0.5px rgba(0, 0, 0, 0.5);
+  border-radius: 30px;
   overflow: hidden;
-  box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.5), inset 0px 2px 1px 0px rgba(255, 255, 255, 0.75);
-  background-color: #43b3e0;
+  background-color: #f4a261;
   padding: 1em 2.35em 1em 2.35em;
   font-size: 1.1em;
   max-width: 24em; }
@@ -1087,14 +1081,14 @@ button,
   input[type="reset"]:hover,
   button:hover,
   .button:hover {
-    background-color: #43bff0;
-    color: #fff !important; }
+    background-color: #e76f51;
+    color: black !important; }
   input[type="button"]:active,
   input[type="submit"]:active,
   input[type="reset"]:active,
   button:active,
   .button:active {
-    background-color: #3ba8d3;
+    background-color: #e76f51;
     top: 1px; }
   input[type="button"].large,
   input[type="submit"].large,
@@ -1161,17 +1155,12 @@ ul.social {
       top: 0;
       position: relative; }
       ul.social li a:before {
-        background-image: url("images/bg.png"), -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
-        background-image: url("images/bg.png"), -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
-        background-image: url("images/bg.png"), -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
-        background-image: url("images/bg.png"), linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
         -moz-transition: background-color .2s ease-in-out;
         -webkit-transition: background-color .2s ease-in-out;
         -ms-transition: background-color .2s ease-in-out;
         transition: background-color .2s ease-in-out;
-        border-radius: 6px;
-        box-shadow: inset 0px 0px 0px 1px #282828, inset 0px 2px 1px 0px rgba(255, 255, 255, 0.1);
-        color: #2e2e2e !important;
+        border-radius: 16px;
+        color: black !important;
         display: block;
         font-size: 26px;
         height: 48px;
@@ -1232,7 +1221,6 @@ ul.actions {
 /* Box */
 .box {
   background: #fff;
-  box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.15), 0px 2px 3px 0px rgba(0, 0, 0, 0.1);
   text-align: center;
   padding: 2em; }
   .box.style1 {
