--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -298,7 +298,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: 700;
+  font-weight: 500;
 }
 
 h1 {
@@ -595,40 +595,31 @@ input[type="submit"],
 input[type="reset"],
 button,
 .button {
-  @include vendor(
-    "background-image",
-    (
-      'url("images/bg.png")',
-      "linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2))"
-    )
-  );
   @include vendor("transition", "background-color .2s ease-in-out");
   -webkit-appearance: none;
   position: relative;
   display: inline-block;
-  color: #fff !important;
+  color: black !important;
   text-decoration: none;
-  font-weight: 700;
+  font-weight: 400;
   border: 0;
   outline: 0;
   cursor: pointer;
-  border-radius: 8px;
-  text-shadow: -1px -1px 0.5px rgba(0, 0, 0, 0.5);
+  border-radius: 30px;
+  // text-shadow: -1px -1px 0.5px rgba(0, 0, 0, 0.5);
   overflow: hidden;
-  box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.5),
-    inset 0px 2px 1px 0px rgba(255, 255, 255, 0.75);
-  background-color: #43b3e0;
+  background-color: #f4a261;
   padding: 1em 2.35em 1em 2.35em;
   font-size: 1.1em;
   max-width: 24em;
 
   &:hover {
-    background-color: #43bff0;
-    color: #fff !important;
+    background-color: #e76f51;
+    color: black !important;
   }
 
   &:active {
-    background-color: #3ba8d3;
+    background-color: #e76f51;
     top: 1px;
   }
 
@@ -698,19 +689,12 @@ ul.social {
       position: relative;
 
       &:before {
-        @include vendor(
-          "background-image",
-          (
-            'url("images/bg.png")',
-            "linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2))"
-          )
-        );
         @include vendor("transition", "background-color .2s ease-in-out");
-        // background-color: #444;
-        border-radius: 6px;
+        // background-color: red;
+        border-radius: 16px;
         // box-shadow: inset 0px 0px 0px 1px #282828,
         //   inset 0px 2px 1px 0px rgba(255, 255, 255, 0.1);
-        color: #2e2e2e !important;
+        color: black !important;
         display: block;
         font-size: 26px;
         height: 48px;
@@ -818,8 +802,8 @@ ul.actions {
 
 .box {
   background: #fff;
-  box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.15),
-    0px 2px 3px 0px rgba(0, 0, 0, 0.1);
+  // box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.15),
+  //   0px 2px 3px 0px rgba(0, 0, 0, 0.1);
   text-align: center;
   padding: 2em;
 
