--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1066,7 +1066,7 @@ button,
   display: inline-block;
   color: black !important;
   text-decoration: none;
-  font-weight: 400;
+  font-weight: 500;
   border: 0;
   outline: 0;
   cursor: pointer;
@@ -1276,8 +1276,7 @@ ul.actions {
     background-image: none;
     background-color: #fff; }
   .wrapper.style2 {
-    background-color: #fafafa;
-    text-shadow: 1px 1px 0px #fff; }
+    background-color: #fafafa; }
   .wrapper.style3 {
     background-color: #f4f4f4;
     text-shadow: 1px 1px 0px #fff; }
