--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -601,7 +601,7 @@ button,
   display: inline-block;
   color: black !important;
   text-decoration: none;
-  font-weight: 400;
+  font-weight: 500;
   border: 0;
   outline: 0;
   cursor: pointer;
@@ -884,7 +884,7 @@ ul.actions {
 
   &.style2 {
     background-color: #fafafa;
-    text-shadow: 1px 1px 0px #fff;
+    // text-shadow: 1px 1px 0px #fff;
   }
 
   &.style3 {
