--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,18 @@ html {
     display: flex;
     justify-content: center;
     font-family: sans-serif;
+    font-size: 1.1em;
+}
+
+a {
+    text-decoration: none;
+    color: #595959;
+    transition: 0.3s;
+}
+
+a:hover {
+    color: #000;
+    box-shadow: 0 0 5px #000;
 }
 
 section {
@@ -38,6 +50,12 @@ li {
 
 .skill-icon {
     max-width: 30px;
+    transition: 0.3s;
+    margin-top: 5px;
+}
+
+.skill-icon:hover {
+    transform: scale(1.1);
 }
 
 .grid-container {
