--- a/dark.css
+++ b/dark.css
@@ -3,11 +3,11 @@ html {
     color: #DDDDDD;
 }
 
-.dark-mode-btn {
+#dark-mode-btn {
     background-color: #DDDDDD;
 }
 
-.dark-mode-btn:hover {
+#dark-mode-btn:hover {
     background-color: #fff;
 }
 
