--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ li {
   grid-auto-flow: row;
 }
 
-.dark-mode-btn {
+#dark-mode-btn {
   position: fixed;
   top: 1vw;
   right: 1vw;
@@ -77,7 +77,7 @@ li {
   transition: 0.3s;
 }
 
-.dark-mode-btn:hover {
+#dark-mode-btn:hover {
   background-color: #000;
 }
 
