refactor: create class section-container, edit blog post 1 copy

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,3 +7,19 @@ body {
 .main-container {
     min-height: 100vh;
 }
+
+.section-container {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+}
+
+@media screen and (max-width: 768px) {
+    .section-container {
+        width: 100%;
+    }
+}
+    
