[sp-38] remove double emoji from site title, fix center image for blog posts

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,4 +22,12 @@ body {
         width: 100%;
     }
 }
-    
+
+.markdown-body p img {
+    display: block;
+    margin: auto;
+    align-self: center;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    margin-bottom: 10px;
+}
