--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -47,3 +47,9 @@ body {
     transform: rotate(360deg);
   }
 }
+
+@media screen and (max-width: 576px) {
+  .twitter-timeline-container {
+    display: none;
+  }
+}
