--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Fonts */
+.radix-themes {
+  --default-font-family: var(--font-varela-round);
+}
+
+/* Framer Motion */
 .framer-pill {
   display: flex;
   overflow-x: hidden;
